[project]
name = "my_history"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "pandas>=2.0.3",
]
requires-python = ">3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
print-cnt='my_history.cli:cnt'

[tool.pdm]
distribution = false
